# Hire-Iq-Resume-Screening-Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/dependencies/: auth.py  models.py
app/api/routes/: __init__.py  analytics.py  assessments.py  auth.py  candidates.py  jobs.py  resume.py  uploads.py
app/api/schemas/: resume.py  schemas.py
app/core/: config.py  logger.py  security.py  store.py
app/db/: __init__.py  models.py  redis.py  session.py
app/services/: field_extractor.py  matcher.py  resume_parser.py  scorer.py  skill_extractor.py
app/utils/: file_handler.py  text.py
app/workers/: resume_processor.py
ml/: loader.py  loader_render.py  predictor.py  predictor_render.py
ml_/datasets/: resume_dataset.csv
ml_/saved_models/: bilstm_model.keras  label_encoder.pkl  tfidf_pipeline.pkl  tokenizer.pkl  xgboost_model.ubj
ml_/training/: generate_dataset.py  resume_screening.py  resume_screening_minimal.py  resume_screening_xgboost.py
scripts/: seed.py
tests/: test_api.py
