[project]
name = "resume-screening"
version = "1.0.0"
description = "Resume screening API using TF-IDF and BiLSTM ensemble models."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "tensorflow==2.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pydantic>=2.6.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]
