[project]
name = "hireiq-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic==1.13.1",
    "argon2-cffi==23.1.0",
    "asyncpg==0.29.0",
    "celery[redis]==5.4.0",
    "fastapi==0.111.1",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.3.1",
    "pydantic[email]==2.7.1",
    "psycopg2-binary==2.9.9",
    "PyMuPDF==1.24.5",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis[hiredis]==5.0.4",
    "scikit-learn==1.5.0",
    "sqlalchemy[asyncio]==2.0.30",
    "uvicorn[standard]==0.30.1",
    "xgboost==2.0.3",
]
